dom/media/platforms/wrappers/MediaChangeMonitor.cpp
@@ -131,8 +131,6 @@ class H264ChangeMonitor : public MediaChangeMonitor::CodecChangeMonitor {
       mCurrentConfig.mImage.height = spsdata.pic_height;
       mCurrentConfig.mDisplay.width = spsdata.display_width;
       mCurrentConfig.mDisplay.height = spsdata.display_height;
-      mCurrentConfig.SetImageRect(
-          gfx::IntRect(0, 0, spsdata.pic_width, spsdata.pic_height));
       mCurrentConfig.mColorDepth = spsdata.ColorDepth();
       mCurrentConfig.mColorSpace = spsdata.ColorSpace();
       mCurrentConfig.mColorRange = spsdata.video_full_range_flag
@@ -192,9 +190,9 @@ class VPXChangeMonitor : public MediaChangeMonitor::CodecChangeMonitor {
       }
       mCurrentConfig.mImage = info.mImage;
       mCurrentConfig.mDisplay = info.mDisplay;
-      mCurrentConfig.SetImageRect(
-          gfx::IntRect(0, 0, info.mImage.width, info.mImage.height));
-
+      // We can't properly determine the image rect once we've had a resolution
+      // change.
+      mCurrentConfig.ResetImageRect();
       PROFILER_MARKER_TEXT(
           "VPX Stream Change", MEDIA_PLAYBACK, {},
           "VPXChangeMonitor::CheckForChange has detected a change in the "
